# bike-computer

./: .gitignore  Cargo.toml  memory.x  mise.toml  rust-toolchain.toml  rust-toolchain.yaml
ios/: .gitignore  .swiftlint.yml  mise.toml  project.yml
ios/BikeComputer.xcodeproj/: project.pbxproj
ios/BikeComputer/App/: BikeComputerApp.swift  Info.plist
ios/BikeComputer/Data/BLE/: BLEManager.swift
ios/Voop.xcodeproj/: project.pbxproj
ios/Voop.xcodeproj/xcshareddata/xcschemes/: Voop.xcscheme
ios/Voop/App/: ContentView.swift  Info.plist  VoopApp.swift
ios/Voop/Data/BLE/: BLEManager.swift  MCUPeripheral.swift
ios/Voop/Data/Persistence/: PointStore.swift
ios/Voop/Domain/Models/: AppSettings.swift  DataPoint.swift  GpsAnchor.swift  RawPoint.swift  Ride.swift
ios/Voop/Domain/Repositories/: DeviceRepository.swift
ios/Voop/Domain/UseCases/: CalculateMetrics.swift  (+1 more)
ios/Voop/Presentation/: AppModel.swift  DemoData.swift  MainView.swift  RideActivityController.swift  SettingsView.swift
ios/Voop/Shared/: RideActivityAttributes.swift
ios/VoopTests/: CalculateMetricsTests.swift  DetectRidesTests.swift
ios/VoopWidget/: Info.plist  RideLiveActivity.swift  VoopWidgetBundle.swift
ios/scripts/: setup_protocol.rb
mcu/: Cargo.toml  build.rs  mise.toml
mcu/.cargo/: config.toml
mcu/src/: ble.rs  clock.rs  gps.rs  logger.rs  main.rs  screen.rs  store.rs  usb.rs
mcu/src/ble/: central.rs  peripheral.rs
protocol/: .gitignore  Cargo.toml  mise.toml
protocol-ffi/: Cargo.toml  mise.toml
protocol-ffi/src/: lib.rs
protocol/src/: lib.rs
src/: main.rs
(+1 files in other folders)
