[package]
name = "bike-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1"] }
embassy-time = { version = "0.4" }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
