[package]
name = "voop-protocol"
version = "0.1.0"
edition = "2021"

[features]
std = []
uniffi = ["dep:uniffi", "std"]
uniffi-cli = ["uniffi", "uniffi/cli"]

[dependencies]
heapless = "0.8"
uniffi = { version = "0.29", optional = true }

[lib]
crate-type = ["lib"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi-cli"]
